--- a/Views/Shared/_NavbarContent.cshtml
+++ b/Views/Shared/_NavbarContent.cshtml
@@ -1,21 +1,28 @@
-﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
+﻿<nav class="navbar navbar-expand-md navbar-toggleable-md navbar-dark border-bottom box-shadow mb-3">
 	<div class="container-fluid">
-		<a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">FlashCards</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-				aria-expanded="false" aria-label="Toggle navigation">
+		<a class="navbar-brand text-light" asp-controller="Cards" asp-action="Sets" asp-route-page="1">FlashCards</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+		<div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
 			<ul class="navbar-nav flex-grow-1">
-				<li class="nav-item">
-					<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+				<li class="nav-item nav-text">
+					<a class="nav-link text-light " asp-controller="Cards" asp-action="Sets" asp-route-page="1">All
+						sets</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link text-light" asp-controller="Cards" asp-action="Sets" asp-route-page="1">All sets</a>
-				</li>
+				@if (User.Identity.IsAuthenticated && User.FindFirst("Nickname") != null)
+				{
+					<li class="nav-item nav-text">
+						<a class="nav-link text-light" asp-controller="Cards" asp-action="Sets" asp-route-page="1"
+						asp-route-author="@(User.FindFirst("Nickname").Value)">
+							My sets
+						</a>
+					</li>
+				}
 				@await Component.InvokeAsync("NavCategories")
-				<li class="nav-item">
-					<a class="nav-link btn btn-info btn-sm text-dark" asp-controller="Cards" asp-action="CreateSet">Create a set</a>
+				<li class="nav-item nav-text mb-2 mb-md-0">
+					<a class="nav-link text-info" asp-controller="Cards" asp-action="CreateSet">Create a set</a>
 				</li>
 			</ul>
 			<partial name="_LoginPartial" />
