--- a/Views/Cards/Category.cshtml
+++ b/Views/Cards/Category.cshtml
@@ -1,16 +1,13 @@
 ﻿@model CategoryPageViewModel
 
-<div class="row">
+<div class="row mx-3">
 	<div class="col-12">
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item" aria-current="page">
-					<a class="text-info"
-					   asp-action="Sets" asp-route-page="1"
-					   asp-route-name="@Model.Filters.Name"
-					   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-					   asp-route-author="@Model.Filters.Author"
-					   asp-route-sort="@Model.Filters.SortBy">
+					<a class="text-info" asp-action="Sets" asp-route-page="1" asp-route-name="@Model.Filters.Name"
+						asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
+						asp-route-sort="@Model.Filters.SortBy">
 						Sets
 					</a>
 				</li>
@@ -19,59 +16,56 @@
 		</nav>
 	</div>
 </div>
-<div class="row">
+<div class="row mx-3">
 	<div class="col-12">
-		<div class="container-fluid cat-sub-title rounded text-dark p-3">
-			<div class="container py-3 px-5">
-				<p class="lead">Flashcard sets</p>
-				<p class="display-6"><strong>@Model.CardCategory.Name</strong></p>
+		<div class="cat-sub-title rounded py-4 px-5 tag-category-@(Model.CardCategory.Name.Replace(" ", ""))">
+			<p class="lead">Flashcard sets</p>
+			<p class="display-6"><strong>@Model.CardCategory.Name</strong></p>
+		</div>
+	</div>
+</div>
+<div class="row mx-3 d-flex justify-content-center">
+	<div class="col-12">
+		<div>
+			<p class="my-3 text-light"><strong>Different category?</strong></p>
+			<div class="pb-3 subject-category-buttons">
+				@foreach (var category in Model.OtherCategories)
+				{
+					<a class="btn btn-primary different-cat-sub text-light" asp-action="Category"
+					asp-route-categoryName="@category.Name" asp-route-page="1" asp-route-name="@Model.Filters.Name"
+					asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
+					asp-route-sort="@Model.Filters.SortBy">
+						@category.Name
+					</a>
+				}
 			</div>
 		</div>
 	</div>
 </div>
-<div class="row">
+<div class="row mx-3 d-flex justify-content-center">
 	<div class="col-12">
-		<p class="mt-3 mb-3 text-light"><strong>Different category?</strong></p>
-	</div>
-	<div class="col-12 subject-category-buttons">
-		@foreach (var category in Model.OtherCategories)
-		{
-			<a class="btn btn-primary text-light different-cat-sub"
-		   asp-route-categoryName="@category.Name"
-		   asp-route-page="1"
-		   asp-route-name="@Model.Filters.Name"
-		   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-		   asp-route-author="@Model.Filters.Author"
-		   asp-route-sort="@Model.Filters.SortBy">
-				@category.Name
-			</a>
-		}
+		<div>
+			<p class="my-3 text-light"><strong>Specific subject?</strong></p>
+			<div class="pb-3 subject-category-buttons">
+				@foreach (var subject in Model.CardCategory.CardSubjects)
+				{
+					<a class="btn btn-primary text-light different-cat-sub" asp-action="Subject"
+					asp-route-categoryName="@Model.CardCategory.Name" asp-route-subjectName="@subject.Name"
+					asp-route-page="1" asp-route-name="@Model.Filters.Name"
+					asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
+					asp-route-sort="@Model.Filters.SortBy">
+						@subject.Name
+					</a>
+				}
+			</div>
+		</div>
 	</div>
 </div>
-<div class="row">
-	<div class="col-12">
-		<p class="mt-3 mb-3 text-light"><strong>Specific subject?</strong></p>
-	</div>
-	<div class="col-12 subject-category-buttons">
-		@foreach (var subject in Model.CardCategory.CardSubjects)
-		{
-			<a class="btn btn-primary text-light different-cat-sub"
-		   asp-action="Subject"
-		   asp-route-categoryName="@Model.CardCategory.Name"
-		   asp-route-subjectName="@subject.Name"
-		   asp-route-page="1"
-		   asp-route-name="@Model.Filters.Name"
-		   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-		   asp-route-author="@Model.Filters.Author"
-		   asp-route-sort="@Model.Filters.SortBy">
-				@subject.Name
-			</a>
-		}
-	</div>
+<div class="row mx-3">
+	<partial name="_SetsFilters" model="@Model.Filters" />
 </div>
-<partial name="_SetsFilters" model="@Model.Filters" />
-<div class="row">
-	<partial name="_CardSetList" model="@Model.CardSets" />
+<div class="row mx-3">
+	<partial name="_CardSetList" model="@Model.CardSetListData" />
 	<partial name="_CardSetListPagination" model="@Model.Pagination" />
 </div>
 <partial name="_ModalPreviewCardSet" />
