--- a/Views/Cards/Subject.cshtml
+++ b/Views/Cards/Subject.cshtml
@@ -1,28 +1,21 @@
 ﻿@model SubjectPageViewModel
 
-<div class="row">
+<div class="row mx-3">
 	<div class="col-12">
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item" aria-current="page">
-					<a class="text-info"
-					   asp-action="Sets" asp-route-page="1"
-					   asp-route-name="@Model.Filters.Name"
-					   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-					   asp-route-author="@Model.Filters.Author"
-					   asp-route-sort="@Model.Filters.SortBy">
+					<a class="text-info" asp-action="Sets" asp-route-page="1" asp-route-name="@Model.Filters.Name"
+						asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
+						asp-route-sort="@Model.Filters.SortBy">
 						Sets
 					</a>
 				</li>
 				<li class="breadcrumb-item" aria-current="page">
-					<a class="text-info"
-					   asp-action="Category"
-					   asp-route-categoryName="@Model.CardSubject.CardCategory.Name"
-					   asp-route-page="1"
-					   asp-route-name="@Model.Filters.Name"
-					   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-					   asp-route-author="@Model.Filters.Author"
-					   asp-route-sort="@Model.Filters.SortBy">
+					<a class="text-info" asp-action="Category"
+						asp-route-categoryName="@Model.CardSubject.CardCategory.Name" asp-route-page="1"
+						asp-route-name="@Model.Filters.Name" asp-route-numberOfCards="@Model.Filters.NumberOfCards"
+						asp-route-author="@Model.Filters.Author" asp-route-sort="@Model.Filters.SortBy">
 						@Model.CardSubject.CardCategory.Name
 					</a>
 				</li>
@@ -31,39 +24,37 @@
 		</nav>
 	</div>
 </div>
-<div class="row">
+<div class="row mx-3">
 	<div class="col-12">
-		<div class="container-fluid cat-sub-title rounded text-dark p-3">
-			<div class="container py-3 px-5">
-				<p class="lead">@(Model.CardSubject.CardCategory.Name) sets</p>
-				<p class="display-6"><strong>@Model.CardSubject.Name</strong></p>
+		<div class="cat-sub-title rounded text-dark py-4 px-5">
+			<p class="lead">@(Model.CardSubject.CardCategory.Name) sets</p>
+			<p class="display-6"><strong>@Model.CardSubject.Name</strong></p>
+		</div>
+	</div>
+</div>
+<div class="row mx-3 d-flex justify-content-center">
+	<div class="col-12">
+		<div>
+			<p class="my-3 text-light"><strong>Different subject?</strong></p>
+			<div class="pb-3 subject-category-buttons">
+				@foreach (var subject in Model.OtherSubjects)
+				{
+					<a class="btn btn-primary text-light different-cat-sub" asp-action="Subject"
+					asp-route-subjectName="@subject.Name" asp-route-page="1" asp-route-name="@Model.Filters.Name"
+					asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
+					asp-route-sort="@Model.Filters.SortBy">
+						@subject.Name
+					</a>
+				}
 			</div>
 		</div>
 	</div>
 </div>
-<div class="row">
-	<div class="col-12">
-		<p class="mt-3 mb-3 text-light"><strong>Different subject?</strong></p>
-	</div>
-	<div class="col-12 subject-category-buttons">
-		@foreach (var subject in Model.OtherSubjects)
-		{
-			<a class="btn btn-primary text-light different-cat-sub"
-		   asp-action="Subject"
-		   asp-route-subjectName="@subject.Name"
-		   asp-route-page="1"
-		   asp-route-name="@Model.Filters.Name"
-		   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-		   asp-route-author="@Model.Filters.Author"
-		   asp-route-sort="@Model.Filters.SortBy">
-				@subject.Name
-			</a>
-		}
-	</div>
+<div class="row mx-3">
+	<partial name="_SetsFilters" model="@Model.Filters" />
 </div>
-<partial name="_SetsFilters" model="@Model.Filters" />
-<div class="row">
-	<partial name="_CardSetList" model="@Model.CardSubject.CardSets" />
+<div class="row mx-3">
+	<partial name="_CardSetList" model="@Model.CardSetListData" />
 	<partial name="_CardSetListPagination" model="@Model.Pagination" />
 </div>
 <partial name="_ModalPreviewCardSet" />
