--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,25 +1,16 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = @Model.ErrorStatus;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div class="row m-0 p-0">
+    <div class="col-12">
+		<div class="container-fluid cat-sub-title rounded text-dark p-3">
+			<div class="container py-3 px-5">
+				<p class="lead">@Model.ErrorStatus</p>
+				<p class="display-6"><strong>@Model.ErrorMessage</strong></p>
+				<a class="btn btn-info mt-2" asp-controller="Cards" asp-action="Sets" asp-route-page="1">Browse sets</a>
+			</div>
+		</div>
+	</div>
+</div>
