--- a/Views/Shared/_CardSetList.cshtml
+++ b/Views/Shared/_CardSetList.cshtml
@@ -1,48 +1,92 @@
-﻿@model List<CardSet>
+﻿@model CardSetListViewModel
+@using System.Security.Claims
 
 <div class="col-12">
-	<p class="mt-3 mb-3 text-light"><strong>Flashcard sets</strong></p>
+	<p class="my-3 text-light"><strong>Flashcard sets</strong></p>
 </div>
-<div class="col-12">
+<div class="col-xs-6">
 	<div class="row">
-		@foreach (var cardSet in @Model)
+		@if(Model.CardSets.Count > 0) {
+		@foreach (var cardSet in @Model.CardSets)
 		{
-			<div class="col-4 pb-4 d-flex align-items-stretch">
+			<div class="col-xs-10 col-sm-6 col-lg-4 pb-4 d-flex align-items-stretch">
 				<div class="card set-card flex-grow-1">
-					<div class="card-body d-flex flex-column justify-content-between">
+					<div class="card-body d-flex flex-column justify-content-between" data-set-id="@cardSet.Id">
 						<div class="row mb-1">
-							<h5 class="card-title text-light">@cardSet.Name</h5>
-							@if ((string)ViewContext.RouteData.Values["action"] == "Category" ||
-									(string)ViewContext.RouteData.Values["action"] == "Sets")
+							@if (Model.ActionName == "Category" ||
+									Model.ActionName == "Sets" ||
+									!cardSet.IsPublic)
 							{
 								<div class="tags mb-1">
-									@if ((string)ViewContext.RouteData.Values["action"] == "Sets")
+									@if (Model.ActionName != "Subject")
 									{
-										<div class="tag-category">
-											<p class="p-0 m-0">@cardSet.CardSubject.CardCategory.Name</p>
+										<div class="tag-category-@(cardSet.CardSubject.CardCategory != null ?
+										cardSet.CardSubject.CardCategory.Name.Replace(" ","") : Model.CategoryName.Replace(" ",""))">
+											<p class="p-0 m-0">
+												@if (Model.ActionName == "Sets")
+												{
+													<span>@cardSet.CardSubject.CardCategory.Name | </span>
+												}
+												@if (Model.ActionName == "Sets" || Model.ActionName == "Category")
+												{
+													<span>@cardSet.CardSubject.Name</span>
+												}
+											</p>
 										</div>
 									}
-									<div class="tag-subject">
-										<p class="p-0 m-0">@cardSet.CardSubject.Name</p>
-									</div>
+									@if (!cardSet.IsPublic)
+									{
+										<div class="tag-private">
+											<p class="p-0 m-0">Private</p>
+										</div>
+									}
 								</div>
 							}
-							<p class="card-text text-light">
-								@cardSet.Description
-							</p>
+							<h5 class="card-title text-light">@cardSet.Name</h5>
 						</div>
 						<div class="row">
 							<div class="col-12 d-flex justify-content-between align-items-center">
-								<p class="m-0 text-light"><a class="text-info user-link"
-									asp-route-author="@cardSet.User.Nickname"><i class="bi bi-person-circle"></i>
-										@cardSet.User.Nickname</a></p>
-								<button class="btn btn-info previewButton" data-id="@cardSet.Id" data-title="@cardSet.Name"
-								data-bs-toggle="modal" data-bs-target="#previewModal">Preview</button>
+								<p class="m-0 text-light">
+									<a class="text-info user-link" asp-route-author="@cardSet.User.Nickname">
+										<i class="bi bi-person-circle"></i>
+										@if (User.Identity.IsAuthenticated && User.FindFirstValue(ClaimTypes.NameIdentifier) ==
+												@cardSet.UserId)
+										{
+											@("Your set")
+										}
+										else
+										{
+											@cardSet.User.Nickname
+										}
+									</a>
+								</p>
+								<div class="btn-group" role="group" aria-label="Basic example">
+									<a class="btn btn-secondary previewButton" 
+									data-id="@cardSet.Id"
+									data-title="@cardSet.Name"
+									data-description="@cardSet.Description"
+									data-bs-toggle="modal"
+									data-bs-target="#previewModal">Preview</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		}}
+		else {
+			<div class="text-center">
+			<p class="text-light">There are no Flashcard sets matching the query.</p>
+			</div>
 		}
 	</div>
 </div>
+<script>
+	var sets = document.querySelectorAll('.set-card .card-body');
+
+	sets.forEach(set => set.addEventListener('click', (e) => {
+		if (e.target != set.querySelector('.previewButton')) {
+			window.location.href = '@Url.Content("~/")' + "Sets/" + set.dataset.setId;
+		}
+	}))
+</script>
