--- a/Views/Shared/_PreviewCardSetInnerModal.cshtml
+++ b/Views/Shared/_PreviewCardSetInnerModal.cshtml
@@ -1,13 +1,8 @@
 ﻿@model List<QuestionWithAnswerViewModel>
-	@foreach (var item in Model)
-	{
-		<div class="set-qa-preview py-3 ">
-			<div class="q-preview px-5">@item.Question</div>
-			<div class="a-preview px-5">@item.Answer</div>
-		</div>
-	}
-@section Scripts {
-<script>
-	
-</script>
+@foreach (var item in Model)
+{
+	<div class="set-qa-preview py-3 mx-2 ">
+		<div class="q-preview">@item.Question</div>
+		<div class="a-preview">@item.Answer</div>
+	</div>
 }
